<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/weekTitlePaddingTop"
        android:weightSum="7"
        android:paddingTop="@dimen/weekTitlePaddingBottom">

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek1"
            android:text="@string/lbl_sun" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek2"
            android:text="@string/lbl_mon" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek3"
            android:text="@string/lbl_tue" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek4"
            android:text="@string/lbl_wed" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek5"
            android:text="@string/lbl_thu" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek6"
            android:text="@string/lbl_fri" />

        <TextView
            style="@style/CalendarView.DayOfTheWeek"
            android:layout_weight="1"
            android:tag="dayOfWeek7"
            android:text="@string/lbl_sat" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

</LinearLayout>