<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:tag="weekRow1"
    android:weightSum="7">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer1">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="10dp"
            android:tag="dayOfMonthText1"
            android:text="@string/lbl_1" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer2">


        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="5dp"
            android:tag="dayOfMonthText2"
            android:text="@string/lbl_2" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer3">


        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="5dp"
            android:tag="dayOfMonthText3"
            android:text="@string/lbl_3" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer4">


        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="5dp"
            android:tag="dayOfMonthText4"
            android:text="@string/lbl_4" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer5">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="5dp"
            android:tag="dayOfMonthText5"
            android:text="@string/lbl_5" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer6">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:tag="dayOfMonthText6"
            android:text="@string/lbl_6" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer7">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:tag="dayOfMonthText7"
            android:text="@string/lbl_7" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage7" />
    </LinearLayout>
</LinearLayout>