<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:tag="weekRow2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer8">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText8"
            android:text="@string/lbl_8" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer9">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText9"
            android:text="@string/lbl_9" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer10">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText10"
            android:text="@string/lbl_10" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer11">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText11"
            android:text="@string/lbl_11" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage11" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer12">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText12"
            android:text="@string/lbl_12" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer13">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText13"
            android:text="@string/lbl_13" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage13" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer14">

        <com.customCRM.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText14"
            android:text="@string/lbl_14" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/app_name"
            android:tag="dayOfMonthImage14" />
    </LinearLayout>

</LinearLayout>