<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:tag="weekRow4">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer22">

        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText22"
            android:text="@string/lbl_22" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage22" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer23">

        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText23"
            android:text="@string/lbl_23" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage23" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer24">


        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText24"
            android:text="@string/lbl_24" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer25">

        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText25"
            android:text="@string/lbl_25" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage25" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer26">


        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText26"
            android:text="@string/lbl_26" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage26" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer27">

        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText27"
            android:text="@string/lbl_27" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage27" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:tag="dayOfMonthContainer28">

        <com.leadmaster.custom_calendar.DayView
            style="@style/CalendarView.DayOfTheMonth"
            android:gravity="center"
            android:padding="@dimen/dimen_10"
            android:tag="dayOfMonthText28"
            android:text="@string/lbl_28" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/circle_blue"
            android:tag="dayOfMonthImage28" />
    </LinearLayout>
</LinearLayout>